WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244883
Linux compilation from case-insensitive filesystem fails due to Syscall.h
https://bugs.webkit.org/show_bug.cgi?id=244883
Summary
Linux compilation from case-insensitive filesystem fails due to Syscall.h
Kimmo Kinnunen
Reported
2022-09-07 01:21:27 PDT
Linux compilation from case-insensitive filesystem fails due to Syscall.h When compiling in Linux VM via macOS, with WebKit in macOS virtiofs mount.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-07 01:23:14 PDT
<
rdar://problem/99639460
>
Kimmo Kinnunen
Comment 2
2022-09-07 01:38:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4091
EWS
Comment 3
2022-09-07 23:49:21 PDT
Committed
254263@main
(6ea8000e01e9): <
https://commits.webkit.org/254263@main
> Reviewed commits have been landed. Closing PR #4091 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug