Linux compilation from case-insensitive filesystem fails due to Syscall.h https://bugs.webkit.org/show_bug.cgi?id=244883 rdar://problem/99639460

Reviewed by Alexey Proskuryakov.

Rename Syscall.h to BSyscall.h.
Linux platform headers include <syscall.h>. When compiling in
a Linux VM that has WebKit from macOS file system via virtiofs,
the compiler finds bmalloc/Syscall.h.

* Source/bmalloc/CMakeLists.txt:
* Source/bmalloc/bmalloc.xcodeproj/project.pbxproj:
* Source/bmalloc/bmalloc/BSyscall.h: Renamed from Source/bmalloc/bmalloc/Syscall.h.
* Source/bmalloc/bmalloc/VMAllocate.h:

Canonical link: https://commits.webkit.org/254263@main